--- a/.final_builds/jobs/dhcpd/index.yml
+++ b/.final_builds/jobs/dhcpd/index.yml
@@ -1,7 +1,10 @@
----
 builds:
   a11f5af432d56c71956afd30b7a60fcb55f3f578:
     version: a11f5af432d56c71956afd30b7a60fcb55f3f578
-    sha1: 79aa8df7b5adf17ce834383fdc5c80ca1d31e779
     blobstore_id: 9d1199d9-7388-4456-9394-3025f3190530
-format-version: '2'
+    sha1: 79aa8df7b5adf17ce834383fdc5c80ca1d31e779
+  bce75e9c255530d6477e942c8664f6f7396f10ac:
+    version: bce75e9c255530d6477e942c8664f6f7396f10ac
+    blobstore_id: 3808782c-62c4-4f5a-4922-46dd3c6ee0a8
+    sha1: af428cd3c5f050e2691481b4f01aa0edfd669b9f
+format-version: "2"
