--- a/releases/dhcpd/index.yml
+++ b/releases/dhcpd/index.yml
@@ -1,5 +1,6 @@
----
 builds:
   3a469fe9-f9d8-4d53-9a41-59d58b827bbc:
-    version: '1'
-format-version: '2'
+    version: "1"
+  b9f5c373-0a53-44b9-641b-329462ec84de:
+    version: "2"
+format-version: "2"
